# yomitoku

./: .env.example  .gitignore  MANIFEST.in  Procfile  README.md  main.py  pyproject.toml  railway.toml  requirements.txt
Scripts/: build_jmdict_db.py  load_jmdict_db.py
src/prompts/: breakdown_analysis_v1_system.txt  breakdown_analysis_v2_user.txt  explain_element_v1_system.txt  explain_element_v1_user.txt  practice_evaluate_v1_system.txt  practice_evaluate_v1_user.txt  practice_generate_v1_system.txt  scan_extract_v1_user.txt  srs_compute_v1_system.txt  srs_compute_v1_user.txt
src/prompts/japanese/: ask_v1_system.txt  ask_v1_user.txt  ask_v2_system.txt  ask_v2_user.txt  breakdown_analysis_v1_user.txt  breakdown_analysis_v2_system.txt  breakdown_analysis_v3_system.txt  breakdown_analysis_v3_user.txt  jmdict_fallback_v1_system.txt  jmdict_fallback_v1_user.txt  onboard_assess_v1_system.txt  onboard_assess_v1_user.txt  practice_generate_v1_system.txt  practice_generate_v1_user.txt  practice_generate_v2_system.txt  practice_generate_v2_user.txt  practice_submit_v1_system.txt  practice_submit_v1_user.txt  scan_extract_v1_system.txt  scan_v1_system.txt  scan_v1_user.txt  scan_v2_system.txt  scan_v2_user.txt
src/yomitoku_api/: __init__.py  config.py  constants.py  deps.py  exceptions.py  main.py  schemas.py
src/yomitoku_api/routers/: analyse.py  explain.py  extract.py  jmdict.py  onboard.py  practice.py  scan.py  srs.py
src/yomitoku_api/services/: analyse.py  (+12 more)
tests/unit/: test_config.py  test_health.py  test_onboard_validate.py  test_srs_gaps_merge.py  test_validate.py
